# tembo-stacks

./: .gitignore  CNAME  CODEOWNERS  README.md  data-plane.sh  dev-suite.md  justfile
.github/workflows/: cargo-test.yaml  conductor-deploy.yml  conductor-test.yml  conductor.yaml  dataplane-webserver-test.yml  deploy.yml  helm-release.yaml  operator.yaml  reconciler-deploy.yml  reconciler-test.yml
charts/conductor/: values.yaml
charts/reconciler/: Chart.yaml  values.yaml
charts/tembo-operator/: Chart.yaml  README.md  values.schema.json  values.yaml
conductor/: Cargo.toml  Dockerfile  Makefile  README.md  justfile
conductor/src/: aws.rs  errors.rs  extensions.rs  lib.rs  main.rs  monitoring.rs  status_reporter.rs  types.rs
conductor/src/aws/: cloudformation.rs  cloudformation_template.rs
conductor/testdata/: operator-values.yaml
conductor/tests/: integration_tests.rs
coredb-operator/: Cargo.toml  README.md  justfile  test-db-params.yaml  test-db.yaml
coredb-operator/src/: controller.rs  cronjob.rs  defaults.rs  deployment_postgres_exporter.rs  errors.rs  ingress.rs  (+9 more)
dataplane-webserver/: Cargo.toml  Dockerfile
deployment-svc/: Cargo.toml  example_payload.rs
deployment-svc/src/: lib.rs  main.rs
reconciler/: Cargo.toml  Dockerfile  Makefile  README.md
stacks/: data_warehouse.yaml  machine_learning.yaml  oltp.yaml
tembo-operator/: Cargo.toml  Dockerfile  README.md  justfile
tembo-operator/src/: controller.rs  crdgen.rs  defaults.rs  deployment_postgres_exporter.rs  errors.rs  exec.rs  extensions.rs  heartbeat.rs  ingress.rs  ingress_route_crd.rs  lib.rs  main.rs  metrics.rs  network_policies.rs  postgres_certificates.rs  postgres_exporter.rs  psql.rs  rbac.rs  secret.rs  service.rs  telemetry.rs  trunk.rs
tembo-operator/src/apis/: coredb_types.rs  mod.rs  postgres_parameters.rs
tembo-operator/src/app_service/: ingress.rs  manager.rs  types.rs
tembo-operator/src/certmanager/: certificates.rs
tembo-operator/src/cloudnativepg/: cnpg.rs  mod.rs  poolers.rs
tembo-operator/src/extensions/: database_queries.rs  extensions.rs  install.rs  kubernetes_queries.rs  mod.rs  toggle.rs  trunk.rs  types.rs
tembo-operator/src/pkg/utils/: database_queries.rs  mod.rs
tembo-operator/src/stacks/: config_engines.rs  mod.rs  types.rs
tembo-operator/src/stacks/templates/: data_warehouse.yaml  machine_learning.yaml  message_queue.yaml  olap.yaml  oltp.yaml  standard.yaml  vectordb.yaml
tembo-operator/src/traefik/: ingress_route_tcp_crd.rs  middleware_tcp_crd.rs  middlewares_crd.rs  mod.rs
tembo-operator/testdata/: kind-config.yaml  minio-bucket-job.yaml  minio.yaml  tembo-operator.yaml  traefik-values.yaml
tembo-operator/tests/: integration_tests.rs
tembo-operator/yaml/: sample-app.yaml  sample-coredb.yaml  sample-document.yaml  sample-dw.yaml  sample-machine-learning-backup.yaml  sample-machine-learning-restore.yaml  sample-message-queue.yaml  sample-olap.yaml  sample-oltp.yaml  sample-postgrest.yaml  sample-standard-backup.yaml  sample-standard-restore.yaml  sample-with-pooler.yaml
tembo-pod-init/: Cargo.toml
(+64 files in other folders)
