[package]
name = "conductor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
tokio = {version = "1.27.0", features = ["full"]}
futures = "0.3.28"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
schemars = "0.8.12"
thiserror = "1.0.40"
env_logger = "0.10.0"
log = "0.4.17"
pgmq = "0.10.0"
base64 = "0.21.0"
tokio-retry = "0.3.0"
aws-config = "0.55.0"
aws-sdk-cloudformation = "0.25.1"
# coredb-controller = "0.0.1-alpha.1"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.82.0"

[dev-dependencies]
rand = "0.8.5"
