[package]
name = "controller"
description = "Tembo Operator for Postgres"
version = "0.11.0"
edition = "2021"
default-run = "controller"
license = "Apache-2.0"
publish = true

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
actix-web = "4.3.1"
futures = "0.3.28"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.20.0", features = ["v1_25", "schemars"], default-features = false }
schemars = { version = "0.8.15", features = ["chrono"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
prometheus = "0.13.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.20.0"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["tokio"], optional = true }
tonic = { version = "0.9", optional = true }
thiserror = "1.0"
passwords = "3.1"
regex = "1.9"
lazy_static = "1.4.0"
itertools = "0.11.0"
base64 = "0.21"
semver = "1.0"
anyhow = "1.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "trust-dns"] }
utoipa = "3.5.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "0.2.9"
hyper = "0.14.27"
rand = "0.8.5"
tower-test = "0.4.0"
futures-util = "0.3"

[dependencies.kube]
features = ["runtime", "client", "derive", "ws"]
version = "0.86.0"
